FIXED ANNOTYING BUGS: 1. When user deleted an several items it would cause other delted items to re render again due to incorrect state management. 2. When several tasks were deleted and the remaining task was edited twice it would cause it to duplicate. This was caused by the way handleTaskChange updated task based on it's index position in the data. If other tasks were deleted the index would shift. So the index captured in the edited card no longer pointed to the correct index when re-rendered causing inconsistencies/ duplication. Fixed by using map to find the correct card by it's id and id matched it updates that card, if not it leaves it as it was.

--- a/src/App.css
+++ b/src/App.css
@@ -201,6 +201,7 @@ footer.footer-container {
 
 /* Modal Forms */
 
+
 div.modal-backdrop {
     position: fixed;
     top: 0;
@@ -223,10 +224,17 @@ div.modal-content {
     color: whitesmoke;
     padding: 1.5rem;
     display: flex;
+    justify-content: center
+}
+
+form {
+    display: flex;
     flex-direction: column;
-    flex-wrap: nowrap;
-    align-items: center;
-    gap: 1.5rem;
+    align-items: stretch;
+    gap: 1rem;
+    width: 100%;
+    max-width: 250px;
+    height: 100%;
 }
 
 div.edit-task, div.add-task {
@@ -257,13 +265,15 @@ div.modal-buttons {
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
-    width: 75%;
-    padding-bottom: 0.6rem;
+    width: 100%;
+    padding-bottom: 0.5rem;
 }
 
 div.modal-buttons button {
+    font-weight: bold;
     border: 1px solid black;
     background-color: rgb(255, 225, 0);
+    padding: 0.3rem 0.7rem;
 }
 
 /* Toast */
